force-app/main/default/objects/Flow_Cleanup_Settings__c/Flow_Cleanup_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Flow Cleanup Settings</label>
</CustomObject>