force-app/main/default/objects/Flow_Cleanup_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Number of Flow version IDs to delete per batch chunk.</description>
    <label>Batch Size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>