force-app/main/default/objects/Flow_Cleanup_Settings__c/fields/Delete_Inactive_Flows__c.field-meta.xml
<CustomField>
    <fullName>Delete_Inactive_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, flows that have been completely inactive (no active version) for longer than the configured threshold will be fully deleted — including all interviews, all versions, and the flow definition itself.</description>
    <label>Delete Inactive Flows</label>
    <type>Checkbox</type>
</CustomField>