force-app/main/default/objects/Flow_Cleanup_Settings__c/fields/Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Run (Log Only)</label>
    <type>Checkbox</type>
</CustomField>