force-app/main/default/objects/Flow_Cleanup_Settings__c/fields/Inactive_Flow_Threshold_Months__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Flow_Threshold_Months__c</fullName>
    <description>Number of months a flow must be completely inactive (no active version and no modifications) before it is eligible for full deletion. Only used when Delete Inactive Flows is enabled.</description>
    <label>Inactive Flow Threshold (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>