force-app/main/default/objects/Flow_Cleanup_Settings__c/fields/Inactive_Versions_To_Keep__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Versions_To_Keep__c</fullName>
    <label>Inactive Versions To Keep</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>